// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoogleMap #componentDidMount should add all event listeners 1`] = `
Object {
  "isThrow": false,
  "value": Map {
    "addListener": [MockFunction] {
      "calls": Array [
        Array [
          "click",
          [Function],
        ],
        Array [
          "dblclick",
          [Function],
        ],
        Array [
          "rightclick",
          [Function],
        ],
        Array [
          "mouseout",
          [Function],
        ],
        Array [
          "mouseover",
          [Function],
        ],
        Array [
          "mousemove",
          [Function],
        ],
        Array [
          "drag",
          [Function],
        ],
        Array [
          "dragstart",
          [Function],
        ],
        Array [
          "dragend",
          [Function],
        ],
        Array [
          "idle",
          [Function],
        ],
        Array [
          "tilesloaded",
          [Function],
        ],
        Array [
          "tilt_changed",
          [Function],
        ],
        Array [
          "zoom_changed",
          [Function],
        ],
        Array [
          "bounds_changed",
          [Function],
        ],
        Array [
          "center_changed",
          [Function],
        ],
        Array [
          "heading_changed",
          [Function],
        ],
        Array [
          "maptypeid_changed",
          [Function],
        ],
        Array [
          "projection_changed",
          [Function],
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    },
    "emit": [MockFunction],
    "get": [MockFunction],
    "getBounds": [MockFunction],
    "getZoom": [MockFunction],
    "listeners": Object {
      "bounds_changed": Array [
        [Function],
      ],
      "center_changed": Array [
        [Function],
      ],
      "click": Array [
        [Function],
      ],
      "dblclick": Array [
        [Function],
      ],
      "drag": Array [
        [Function],
      ],
      "dragend": Array [
        [Function],
      ],
      "dragstart": Array [
        [Function],
      ],
      "heading_changed": Array [
        [Function],
      ],
      "idle": Array [
        [Function],
      ],
      "maptypeid_changed": Array [
        [Function],
      ],
      "mousemove": Array [
        [Function],
      ],
      "mouseout": Array [
        [Function],
      ],
      "mouseover": Array [
        [Function],
      ],
      "projection_changed": Array [
        [Function],
      ],
      "rightclick": Array [
        [Function],
      ],
      "tilesloaded": Array [
        [Function],
      ],
      "tilt_changed": Array [
        [Function],
      ],
      "zoom_changed": Array [
        [Function],
      ],
    },
    "node": <div
      style="height: 100%;"
    />,
    "set": [MockFunction],
    "setValues": [MockFunction],
    "values": Object {
      "backgroundColor": undefined,
      "bounds": Array [],
      "center": Object {
        "lat": 0,
        "lng": 1,
      },
      "clickableIcons": undefined,
      "disableDefaultUI": true,
      "disableDoubleClickZoom": undefined,
      "mapTypeId": undefined,
      "zoom": 0,
    },
  },
}
`;

exports[`GoogleMap #componentDidMount should pass custom options to map: calls 1`] = `
Array [
  Array [
    <div
      style="height: 100%;"
    />,
    Object {
      "backgroundColor": undefined,
      "center": Object {
        "lat": 0,
        "lng": 1,
      },
      "clickableIcons": false,
      "disableDefaultUI": true,
      "disableDoubleClickZoom": true,
      "mapTypeId": "HYBRID",
      "zoom": 0,
    },
  ],
]
`;

exports[`GoogleMap #componentDidMount should pass default options to map: calls 1`] = `
Array [
  Array [
    <div
      style="height: 100%;"
    />,
    Object {
      "backgroundColor": undefined,
      "center": Object {
        "lat": 0,
        "lng": 1,
      },
      "clickableIcons": undefined,
      "disableDefaultUI": true,
      "disableDoubleClickZoom": undefined,
      "mapTypeId": undefined,
      "zoom": 0,
    },
  ],
]
`;
